Default copy, prevent horizontal scroll mobile examples

--- a/docs/src/assets/styles/core/_objects.scss
+++ b/docs/src/assets/styles/core/_objects.scss
@@ -27,8 +27,8 @@ svg {
 .square-group {
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  width: 24rem;
+  justify-content: space-between;
+  width: 20rem;
   max-width: 100%;
 }
 
